页面逻辑修改

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,7 +37,7 @@
     <string name="clearcache">清理缓存</string>
     <string name="userinfo">用户信息</string>
     <string name="exit">退出</string>
-
+    <string name="login_failed">请求失败</string>
     <!-- 地区名称-->
     <string name="tianjin">天津</string>
     <string name="wuqing">武清</string>
